GUI/lexer/TraumaParser.java
// Generated from Trauma.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TraumaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__11=1, T__10=2, T__9=3, T__8=4, T__7=5, T__6=6, T__5=7, T__4=8, T__3=9, 
		T__2=10, T__1=11, T__0=12, Whitespace=13, Newline=14, BlockComment=15, 
		LineComment=16, INTCONST=17, FLOATCONST=18, CHARCONST=19, STRINGCONST=20, 
		NEWLINE=21, TAB=22, Semicolon=23, Comma=24, Period=25, Id=26, Or=27, And=28, 
		Not=29, Relop=30, Sumop=31, Multop=32, LeftParen=33, RightParen=34, LeftBrace=35, 
		RightBrace=36, Unaryop=37, True=38, False=39, Equal=40;
	public static final String[] tokenNames = {
		"<INVALID>", "'void'", "'bool'", "'break'", "'while'", "'echo'", "'string'", 
		"'if'", "'int'", "'else'", "'return'", "'float'", "'char'", "Whitespace", 
		"Newline", "BlockComment", "LineComment", "INTCONST", "FLOATCONST", "CHARCONST", 
		"STRINGCONST", "NEWLINE", "TAB", "';'", "','", "'.'", "Id", "'||'", "'&&'", 
		"'!'", "Relop", "Sumop", "Multop", "'('", "')'", "'{'", "'}'", "'-'", 
		"'true'", "'false'", "':='"
	};
	public static final int
		RULE_program = 0, RULE_declarationlist = 1, RULE_declaration = 2, RULE_vardeclaration = 3, 
		RULE_typespecifier = 4, RULE_vardeclist = 5, RULE_vardeclinit = 6, RULE_simpleexpression = 7, 
		RULE_andexpression = 8, RULE_unaryrelexpression = 9, RULE_relexpression = 10, 
		RULE_sumexpression = 11, RULE_multexpression = 12, RULE_unaryexpression = 13, 
		RULE_factor = 14, RULE_mutable = 15, RULE_immutable = 16, RULE_call = 17, 
		RULE_args = 18, RULE_arglist = 19, RULE_constant = 20, RULE_expression = 21, 
		RULE_funcdeclaration = 22, RULE_params = 23, RULE_paramlist = 24, RULE_statement = 25, 
		RULE_breakstmt = 26, RULE_returnstmt = 27, RULE_iterationstmt = 28, RULE_selectionstmt = 29, 
		RULE_compoundstmt = 30, RULE_localdeclarations = 31, RULE_statementlist = 32, 
		RULE_expressionstmt = 33, RULE_printstmt = 34;
	public static final String[] ruleNames = {
		"program", "declarationlist", "declaration", "vardeclaration", "typespecifier", 
		"vardeclist", "vardeclinit", "simpleexpression", "andexpression", "unaryrelexpression", 
		"relexpression", "sumexpression", "multexpression", "unaryexpression", 
		"factor", "mutable", "immutable", "call", "args", "arglist", "constant", 
		"expression", "funcdeclaration", "params", "paramlist", "statement", "breakstmt", 
		"returnstmt", "iterationstmt", "selectionstmt", "compoundstmt", "localdeclarations", 
		"statementlist", "expressionstmt", "printstmt"
	};

	@Override
	public String getGrammarFileName() { return "Trauma.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public TraumaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public DeclarationlistContext declarationlist() {
			return getRuleContext(DeclarationlistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); declarationlist(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationlistContext extends ParserRuleContext {
		public int _p;
		public DeclarationlistContext declarationlist() {
			return getRuleContext(DeclarationlistContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationlistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DeclarationlistContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_declarationlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterDeclarationlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitDeclarationlist(this);
		}
	}

	public final DeclarationlistContext declarationlist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclarationlistContext _localctx = new DeclarationlistContext(_ctx, _parentState, _p);
		DeclarationlistContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, RULE_declarationlist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(73); declaration();
			}
			_ctx.stop = _input.LT(-1);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclarationlistContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_declarationlist);
					setState(75);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(76); declaration();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public VardeclarationContext vardeclaration() {
			return getRuleContext(VardeclarationContext.class,0);
		}
		public FuncdeclarationContext funcdeclaration() {
			return getRuleContext(FuncdeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82); vardeclaration();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83); funcdeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclarationContext extends ParserRuleContext {
		public TerminalNode Semicolon() { return getToken(TraumaParser.Semicolon, 0); }
		public VardeclistContext vardeclist() {
			return getRuleContext(VardeclistContext.class,0);
		}
		public TypespecifierContext typespecifier() {
			return getRuleContext(TypespecifierContext.class,0);
		}
		public VardeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterVardeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitVardeclaration(this);
		}
	}

	public final VardeclarationContext vardeclaration() throws RecognitionException {
		VardeclarationContext _localctx = new VardeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); typespecifier();
			setState(87); vardeclist(0);
			setState(88); match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypespecifierContext extends ParserRuleContext {
		public TypespecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typespecifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterTypespecifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitTypespecifier(this);
		}
	}

	public final TypespecifierContext typespecifier() throws RecognitionException {
		TypespecifierContext _localctx = new TypespecifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typespecifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 6) | (1L << 8) | (1L << 11) | (1L << 12))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclistContext extends ParserRuleContext {
		public int _p;
		public VardeclistContext vardeclist() {
			return getRuleContext(VardeclistContext.class,0);
		}
		public VardeclinitContext vardeclinit() {
			return getRuleContext(VardeclinitContext.class,0);
		}
		public TerminalNode Comma() { return getToken(TraumaParser.Comma, 0); }
		public VardeclistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public VardeclistContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_vardeclist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterVardeclist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitVardeclist(this);
		}
	}

	public final VardeclistContext vardeclist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VardeclistContext _localctx = new VardeclistContext(_ctx, _parentState, _p);
		VardeclistContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, RULE_vardeclist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(93); vardeclinit();
			}
			_ctx.stop = _input.LT(-1);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VardeclistContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_vardeclist);
					setState(95);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(96); match(Comma);
					setState(97); vardeclinit();
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VardeclinitContext extends ParserRuleContext {
		public SimpleexpressionContext simpleexpression() {
			return getRuleContext(SimpleexpressionContext.class,0);
		}
		public TerminalNode Id() { return getToken(TraumaParser.Id, 0); }
		public TerminalNode Equal() { return getToken(TraumaParser.Equal, 0); }
		public VardeclinitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclinit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterVardeclinit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitVardeclinit(this);
		}
	}

	public final VardeclinitContext vardeclinit() throws RecognitionException {
		VardeclinitContext _localctx = new VardeclinitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_vardeclinit);
		try {
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103); match(Id);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104); match(Id);
				setState(105); match(Equal);
				setState(106); simpleexpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleexpressionContext extends ParserRuleContext {
		public int _p;
		public SimpleexpressionContext simpleexpression() {
			return getRuleContext(SimpleexpressionContext.class,0);
		}
		public AndexpressionContext andexpression() {
			return getRuleContext(AndexpressionContext.class,0);
		}
		public TerminalNode Or() { return getToken(TraumaParser.Or, 0); }
		public SimpleexpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SimpleexpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_simpleexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterSimpleexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitSimpleexpression(this);
		}
	}

	public final SimpleexpressionContext simpleexpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		SimpleexpressionContext _localctx = new SimpleexpressionContext(_ctx, _parentState, _p);
		SimpleexpressionContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, RULE_simpleexpression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(110); andexpression(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new SimpleexpressionContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_simpleexpression);
					setState(112);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(113); match(Or);
					setState(114); andexpression(0);
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AndexpressionContext extends ParserRuleContext {
		public int _p;
		public TerminalNode And() { return getToken(TraumaParser.And, 0); }
		public AndexpressionContext andexpression() {
			return getRuleContext(AndexpressionContext.class,0);
		}
		public UnaryrelexpressionContext unaryrelexpression() {
			return getRuleContext(UnaryrelexpressionContext.class,0);
		}
		public AndexpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AndexpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_andexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterAndexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitAndexpression(this);
		}
	}

	public final AndexpressionContext andexpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AndexpressionContext _localctx = new AndexpressionContext(_ctx, _parentState, _p);
		AndexpressionContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, RULE_andexpression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(121); unaryrelexpression();
			}
			_ctx.stop = _input.LT(-1);
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AndexpressionContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_andexpression);
					setState(123);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(124); match(And);
					setState(125); unaryrelexpression();
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class UnaryrelexpressionContext extends ParserRuleContext {
		public RelexpressionContext relexpression() {
			return getRuleContext(RelexpressionContext.class,0);
		}
		public TerminalNode Not() { return getToken(TraumaParser.Not, 0); }
		public UnaryrelexpressionContext unaryrelexpression() {
			return getRuleContext(UnaryrelexpressionContext.class,0);
		}
		public UnaryrelexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryrelexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterUnaryrelexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitUnaryrelexpression(this);
		}
	}

	public final UnaryrelexpressionContext unaryrelexpression() throws RecognitionException {
		UnaryrelexpressionContext _localctx = new UnaryrelexpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_unaryrelexpression);
		try {
			setState(134);
			switch (_input.LA(1)) {
			case Not:
				enterOuterAlt(_localctx, 1);
				{
				setState(131); match(Not);
				setState(132); unaryrelexpression();
				}
				break;
			case INTCONST:
			case FLOATCONST:
			case CHARCONST:
			case STRINGCONST:
			case NEWLINE:
			case TAB:
			case Id:
			case LeftParen:
			case Unaryop:
			case True:
			case False:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); relexpression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelexpressionContext extends ParserRuleContext {
		public int _p;
		public TerminalNode Relop() { return getToken(TraumaParser.Relop, 0); }
		public RelexpressionContext relexpression() {
			return getRuleContext(RelexpressionContext.class,0);
		}
		public SumexpressionContext sumexpression() {
			return getRuleContext(SumexpressionContext.class,0);
		}
		public RelexpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RelexpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_relexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterRelexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitRelexpression(this);
		}
	}

	public final RelexpressionContext relexpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RelexpressionContext _localctx = new RelexpressionContext(_ctx, _parentState, _p);
		RelexpressionContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, RULE_relexpression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(137); sumexpression(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RelexpressionContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_relexpression);
					setState(139);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(140); match(Relop);
					setState(141); sumexpression(0);
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SumexpressionContext extends ParserRuleContext {
		public int _p;
		public SumexpressionContext sumexpression() {
			return getRuleContext(SumexpressionContext.class,0);
		}
		public TerminalNode Sumop() { return getToken(TraumaParser.Sumop, 0); }
		public MultexpressionContext multexpression() {
			return getRuleContext(MultexpressionContext.class,0);
		}
		public SumexpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SumexpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_sumexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterSumexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitSumexpression(this);
		}
	}

	public final SumexpressionContext sumexpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		SumexpressionContext _localctx = new SumexpressionContext(_ctx, _parentState, _p);
		SumexpressionContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, RULE_sumexpression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(148); multexpression(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new SumexpressionContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_sumexpression);
					setState(150);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(151); match(Sumop);
					setState(152); multexpression(0);
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MultexpressionContext extends ParserRuleContext {
		public int _p;
		public TerminalNode Multop() { return getToken(TraumaParser.Multop, 0); }
		public MultexpressionContext multexpression() {
			return getRuleContext(MultexpressionContext.class,0);
		}
		public UnaryexpressionContext unaryexpression() {
			return getRuleContext(UnaryexpressionContext.class,0);
		}
		public MultexpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MultexpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_multexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).enterMultexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraumaListener ) ((TraumaListener)listener).exitMultexpression(this);
		}
	}
